--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             risus ultrices adipiscing.  Lorem ipsum dolor sit amet,
             consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
             rutrum, nunc leo tempus nisl, eu mollis justo velit at
-            nunc. Fusce nec egestas sem. Donec fringilla.
+            nunc. Fusces nec egestas sem. Donec fringilla.
           </p>
         </div>
       </div>
