Edited product desc in index.html

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         <div class="span5 copy">
           <h2>Train your brain for the Online Quiz Tournament.</h2>    
           <p class="lead">
-             Once a month, quizzers all over the world take part in the same quiz to earn Rankings points.
+             Once a month, quizzers all over the world take part in the same quiz to earn rankings points.
           </p>
         </div>
       </div>
