--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
- <head>
+  <head>
     <meta charset="utf-8">
-    <title>StartQuiz - The Online Quiz Tournament.</title>
+    <title>StartQuiz</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -145,13 +145,14 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-          <img class="img-polaroid" src="http://i.imgur.com/DHUt0ok.png">
+          <img class="img-polaroid" alt="Placeholder" src="http://i.imgur.com/DHUt0ok.png">
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
         <div class="span5 actions">
+          <div class="row-fluid">
           <div class="span8 offset2">
-            <div class="statistics">
+            <div class="row-fluid statistics">
               <div class="span4">
                 <!-- linediv-l and linediv-r give dividing lines that look
                 different in horizontal and vertical layouts, illustrating
@@ -162,7 +163,7 @@
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$350</h3> <p>of $8,000</p>
+                  <h3>$350</h3> <p>of $10,000</p>
                 </div>
               </div>
               <div class="span4">
@@ -172,25 +173,32 @@
               </div>
             </div>
           </div>
+          <div class="row-fluid">
           <div class="span10 offset1">
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 5%;"></div>
-              <div class="bar bar-warning" style="width: 95%;"></div>
+              <div class="bar bar-success" style="width: 60%;"></div>
+              <div class="bar bar-warning" style="width: 40%;"></div>
             </div>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
             <button class="btn btn-success btn-large">Preorder</button>
           </div>
+          </div>
+          <div class="row-fluid">
           <div class="span8 offset2 social">
             <!-- Social buttons are not included in default Bootstrap. -->
             <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
             <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
             <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
           </div>
+          </div>
+        </div>
         </div>
       </div>
 
@@ -200,25 +208,25 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/aLk9Chh.png">
+          <img class="img-polaroid"  alt="Placeholder" src=http://i.imgur.com/aLk9Chh.png">
         </div>
         <div class="span5 copy">
-          <h2>Train your brain for the Online Quiz Tournament.</h2>    
+          <h2>Train your brain for the Online Quiz Tournament.</h2>  
           <p class="lead">
-             Once a month, quizzers all over the world take part in the same quiz to earn rankings points.
+            Once a month, quizzers all over the world take part in the same quiz to earn rankings points.
           </p>
         </div>
       </div>
 
       <div class="row-fluid section2">
         <div class="span5 offset1 copy copy-right">
-          <h2>Quiz</h2>
+          <h2>Quiz</h2> 
           <p class="lead">
-           The quiz consists of questions that cover diferent topics such as General Knowledge, Geography, History, Humanities, Literature.
+          The quiz consists of questions that cover diferent topics such as General Knowledge, Geography, History, Humanities, Literature. 
           </p>
         </div>
         <div class="span5 asset">
-          <img class="img-polaroid" src="http://i.imgur.com/bPh3HRo.png">
+          <img class="img-polaroid"  alt="Placeholder" src="http://i.imgur.com/bPh3HRo.png">
         </div>
       </div>
 
