--- a/index.html
+++ b/index.html
@@ -97,6 +97,10 @@
       .footer a {
         color: #ccccff;
       }
+      div.addthis_toolbox {
+         width:180px;
+        margin: 0 auto;
+      }
     </style>
   </head>
   <body>
@@ -158,17 +162,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>4</h3> <p>backers</p>
+                <h3>0</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$350</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $30,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>50</h3> <p>days left</p>
+                <h3>90</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -187,15 +191,21 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+            <a class="coinbase-button" data-code="27f2f83e436e4d20ae440431c52bdde8" href="https://coinbase.com/checkouts/27f2f83e436e4d20ae440431c52bdde8">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
           </div>
           <div class="row-fluid">
-          <div class="span8 offset2 social">
-            <!-- Social buttons are not included in default Bootstrap. -->
-            <!-- See: http://noizwaves.github.io/bootstrap-social-buttons -->
-            <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
-            <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+          <div class="span8 offset2 social"> 
+             <!-- AddThis Button BEGIN -->
+             <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
+             <a class="addthis_button_preferred_1"></a>
+             <a class="addthis_button_preferred_2"></a>
+             <a class="addthis_button_compact"></a>
+             <a class="addthis_counter addthis_bubble_style"></a> 
+             </div>
+             <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
+             <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5210130462a9f1a8"></script>
+             <!-- AddThis Button END -->
           </div>
           </div>
         </div>
